--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+body{
+    @apply bg-light dark:bg-dark text-dark dark:text-light
+}
