--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 
 body{
-    @apply bg-light dark:bg-dark text-dark dark:text-light
+    @apply bg-light font-body dark:bg-dark text-dark dark:text-light
+}
+
+:root{
+    --font-base: 'Inter', sans-serif;
 }
