slider hero desktop

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -11,3 +11,14 @@ body{
 :root{
     --font-base: 'Inter', sans-serif;
 }
+
+/* slider */
+.carousel__pagination{
+   @apply justify-start gap-6
+}
+.carousel__pagination-button{
+    @apply w-3 h-3 bg-primary bg-opacity-25 rounded-full after:hidden
+}
+.carousel__pagination-button--active{
+    @apply bg-primary
+}
