--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -17,8 +17,8 @@ body{
    @apply justify-start gap-6
 }
 .carousel__pagination-button{
-    @apply w-3 h-3 bg-primary bg-opacity-25 rounded-full after:hidden
+    @apply !w-3 !h-3 !bg-primary !bg-opacity-25 !rounded-full after:!hidden
 }
 .carousel__pagination-button--active{
-    @apply bg-primary
+    @apply !bg-primary
 }
