add class neimorphism

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -24,5 +24,5 @@ body {
 
 /* neomorphism */
 .neomorphism {
-  box-shadow: 7px 7px 14px #cccfd3, -7px -7px 14px #fff;
+  box-shadow: 7px 7px 14px #cccfd3, -7px -7px 14px #f9f8fd;
 }
